Imported from previous site hosted at Wellesley

--- a/index.html
+++ b/index.html
@@ -1,1 +1,114 @@
-Hello world
+<!DOCTYPE html>
+<html>
+
+<head>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <title>LACS Home</title>
+</head>
+
+<body>
+
+  <div class="navbar"></div>
+
+  <div class="content">
+
+    <img src='static/lacslogo.gif' style='display: block;margin:0.67em auto;'>
+    <p style='text-align:center;'> (A nice photo can also replace the logo above)</p>
+
+    <p>
+      The Liberal Arts Computer Science (LACS) Consortium is a group of computer scientists
+      who work to model, advance, and sustain the study of computer science in liberal
+      arts colleges throughout the nation.
+    </p>
+
+    <p>
+      As a group, we actively engage in curriculum development, scholarly research,
+      and other projects that seek to advance high-quality undergraduate computer
+      science education. For more detailed information about our origins, see our <a href='history.html'>History</a> page.
+    </p>
+
+    <p>
+      Begun in 1984 by 9 computer scientists, LACS soon grew to 18 members, which
+      is our approximate size today. To learn more about us and our work, see our
+      <a href='who-is-lacs.html'>Who Is LACS</a> and <a href='what-we-do.html'>What We Do</a> pages. To send us feedback or make inquiries about
+      upcoming LACS activities, please use the Contact Us page.
+    </p>
+
+    <p>
+      Thank you!
+      http://cs.wellesley.edu/~lacs/
+    </p>
+
+    <div align="center">
+
+      <table style="width: 549px; height: 567px;" border="0">
+
+        <h3>LACS and CC 2001</h3>
+
+        <td width="100%">
+          <p>
+            In June, 2007, the ACM Journal on Educational Resources in Computing
+            (ACM JERIC, Vol 7, No 2) published model curriculum that interpreted
+            CC2001 for liberal arts schools. The paper from JERIC is linked below:
+          </p>
+
+          <blockquote>
+            <a href="http://cs.wellesley.edu/~pmetaxas/LACS2007report.pdf">
+              "A 2007 Model Curriculum for a Liberal Arts Degree in Computer Science" (PDF)
+            </a>
+          </blockquote>
+
+          <p>
+            Please note that any citations to this paper should <b>not</b> be to this
+            website, but should be to the official publication published in the ACM
+            Digital Library.That citation is:
+          </p>
+
+          <blockquote>
+            <i>Journal on Educational Resources in Computing (JERIC)</i>,
+            Volume 7, Issue 2 (June 2007), Article No. 2, 2007.
+          </blockquote>
+
+          <p>
+            The paper is a copyrighted publication of the ACM. Use
+            of the paper is governed by the following copyright notice:
+          </p>
+
+          <p>
+            <i>Permission
+              to make digital or hard copies of part or all of this work
+              for personal or classroom use is
+              granted without fee provided that copies are not made or distributed
+              for profit or direct commercial
+              advantage and that copies show this notice on the first page or initial
+              screen of a display along
+              with the full citation. Copyrights for components of this work owned by
+              others than ACM must be
+              honored. Abstracting with credit is permitted. To copy otherwise, to
+              republish, to post on servers,
+              to redistribute to lists, or to use any component of this work in other
+              works requires prior specific
+              permission and/or a fee. Permissions may be requested from Publications
+              Dept., ACM, Inc., 2 Penn
+              Plaza, Suite 701, New York, NY 10121-0701 USA, fax +1 (212) 869-0481,
+              or <a href='mailto:permissions@acm.org'>permissions@acm.org</a>.</i>
+            </p>
+
+          </td>
+
+        </table>
+
+      </div>
+
+    </div>
+
+
+    <!-- Load React. -->
+    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+    <!-- add three <script> tags to the HTML page right before the closing </body> tag -->
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    <script src="js/navbar.js"></script>
+  </body>
+  </html>
