Added locations of recent meetings

--- a/meetings.html
+++ b/meetings.html
@@ -42,14 +42,16 @@
     <br>2010	<a target="_blank" href="https://drive.google.com/drive/folders/0BzuUD9S-uHR6ZDRPaFhOMWVJRWs">George Washington </a>
     <br>2011	<a target="_blank" href="https://drive.google.com/drive/folders/0BzuUD9S-uHR6S2laVkVmTkFwY3M">Hope & Kalamazoo</a>
     <br>2012	Bryn Mawr & Swarthmore
-    <br>2013	<a target="_blank" href="https://drive.google.com/drive/folders/0BzuUD9S-uHR6ZjFnTzd6WEotMWc">Grinnel</a>
+    <br>2013	<a target="_blank" href="https://drive.google.com/drive/folders/0BzuUD9S-uHR6ZjFnTzd6WEotMWc">Grinnell</a>
     <br>2014	<a target="_blank" href="https://drive.google.com/drive/folders/0B8-PVcAPmTVHRUlsWHVSc2lZY2s">Wellesley</a>
     <br>2015	<a target="_blank" href="https://drive.google.com/drive/folders/0B8-PVcAPmTVHMEdHcTNMbTlrVWM">Puget Sound</a>
     <br>2016	<a target="_blank" href="https://drive.google.com/drive/folders/0B8-PVcAPmTVHdXZ2VXlpTUFZejA">Williams</a>
     <br>2017	<a target="_blank" href="https://drive.google.com/drive/folders/0B8-PVcAPmTVHOG5UbWZNTVh6cG8">Whitman</a>
     <br>2018	<a target="_blank" href="https://docs.google.com/document/d/1038NI55hhzbVm3cr5oel1gT-LLpWb19Q5IN6ZRFv5Lw/edit">Calvin</a>
     <br>2019	<a target="_blank" href="https://docs.google.com/document/d/13zvF7Piz5kbNqYyMtCpMWezY720mjs8ROAqoMKIuYJw/edit">Pomona</a>
-    <br>2020	Creighton
+    <br>2020	Virtual
+    <br>2021	Virtual
+    <br>2022	Creighton
     <br>
   </div>
 
