Add Barnard to list of meetings

--- a/meetings.html
+++ b/meetings.html
@@ -51,8 +51,8 @@
     <br>2019	<a target="_blank" href="https://docs.google.com/document/d/13zvF7Piz5kbNqYyMtCpMWezY720mjs8ROAqoMKIuYJw/edit">Pomona</a>
     <br>2020	Virtual
     <br>2021	Virtual
-    <br>2022	Creighton
-    <br>
+    <br>2022	Creighton University
+    <br>2023  Barnard College
   </div>
 
 
