--- a/meetings.html
+++ b/meetings.html
@@ -53,7 +53,7 @@
     <br>2021	Virtual
     <br>2022	Creighton University
     <br>2023  Barnard College
-    <br>2024  Davidson
+    <br>2024  <a target="_blank" href="https://drive.google.com/open?id=1Mqv8xoajOtUdbPCYvCZNXEce-pQUrXiZ&usp=drive_fs">Davidson</a> 
   </div>
 
 
